# tlsperf

./: .gitignore  README.md  meson.build  readme.txt
.devcontainer/: Dockerfile
Dockerbuild/: Dockerfile  tmux.conf
Dockerbuild/web_deploy/: server.py
Dockerbuild/web_deploy/public/: index.html
Docs/: kubernetes.txt  scratch.txt
db/: server.py
docker_build/: Dockerfile
docker_build/web/: server.py
kube_runs/: account.yaml  ens5.yaml  eth0.yaml  pv.yaml  pvc.yaml  scratch.txt  tlsclient.yaml  tlsperf_dev.yaml  tlsserver.yaml  tmp.yaml  web.yaml  web_dev.yaml  web_org.yaml
tlsclient/: meson.build  tlsclient_app.cpp  tlsclient_app.hpp  tlsclient_cfg.hpp  tlsclient_main.cpp  tlsclient_socket.cpp  tlsclient_socket.hpp  tlsclient_stats.hpp
tlspack_app/: meson.build  tlspack_app.cpp  tlspack_app.hpp
tlspack_socket/: ev_app.cpp  ev_app.hpp  ev_platform.hpp  ev_socket.cpp  ev_socket.hpp  meson.build
tlsserver/: meson.build  tlsserver_app.cpp  tlsserver_app.hpp  tlsserver_cfg.hpp  tlsserver_main.cpp  tlsserver_socket.cpp  tlsserver_socket.hpp  tlsserver_stats.hpp
utest/: json.cpp  meson.build  test.json
web/: .gitignore  package-lock copy.json  package-lock.json  package.json  server.py  tmp.yaml
web/public/: index.html
web/public/assets/: mystyles.css
web/sass/: mystyles.scss
web/server/: config.py  ens5_client.pcap  main.py  test.py
web/server/modules/: NetIface.py  TlsClient.py  TlsClientServer.py  TlsServer.py  _TlsClientServer.py
web/server/yaml/: web_dev.yaml
web/server/yaml_template/: Interface.yaml  TlsClientConfigMap.yaml  TlsClientPod.yaml  TlsServerConfigMap.yaml  TlsServerPod.yaml
web/src/: AddNode.svelte  AddNodeGroup.svelte  AddProfile.svelte  AddProfileGroup.svelte  App.svelte  CircleIcon.svelte  CsGroup copy.svelte  CsGroup old.svelte  CsGroup.svelte  CsGroups.svelte  Deployment.svelte  Navbar.svelte  Sidebar.svelte  TrafficNodes.svelte  TrafficProfiles.svelte  Treenode.svelte  TreenodeOrg.svelte  store.js  tlsclient_config_map.yaml  tlsclient_pod.yaml  tlsserver_config_map.yaml  tlsserver_pod.yaml
web/src/routes/: Blank.svelte  Home.svelte  Node.svelte  NotFound.svelte  Profile copy 2.svelte  Profile copy 4.svelte  Profile copy.svelte  Profile.svelte
web/tmp/mytls/: package-lock.json  package.json  svelte.config.js
web/tmp/mytls/src/: app.html
web/tmp/mytls/src/lib/: AddNodeGroup.svelte  AddProfile.svelte  AddProfileGroup.svelte  TrafficNodes.svelte  TrafficProfiles.svelte  Treenode.svelte
web/tmp/mytls/src/routes/: __layout.svelte
web/tmp/mytls/src/routes/api/: api_client.js  node_groups.json.js  nodes.json.js
web/ui/: package-lock.json  package.json  svelte.config.js
web/ui/src/: app.html
web/ui/src/lib/: AddNode.svelte  AddNodeGroup.svelte  AddProfile.svelte  AddProfileGroup.svelte  ExportProfile.svelte  ImportProfile.svelte  RemoveNode.svelte  RemoveNodeGroup.svelte  RemoveProfile.svelte  RemoveProfileGroup.svelte  TrafficNodes.svelte  TrafficProfiles.svelte  Treenode.svelte  clickOutside.js  mongodb-client.js  store.js
web/ui/src/routes/: __layout.svelte  about.svelte  deleted.svelte  index.svelte
web/ui/src/routes/api/: api_client.js  node.json.js  node_groups.json.js  nodes.json.js  profile.json.js  profile_groups.json.js  profile_runs.json.js  profile_tcpdump.js  profile_tcpdump.pcap.js  profile_tcpdump_client.txt.js  profile_tcpdump_server.pcap.js  profiles.json.js  stats.json.js
web/ui/src/routes/node/[Group]/: [Name].svelte
web/ui/src/routes/profile/[Group]/: [Name].svelte
(+4 files in other folders)
